PORTAL: EDIT DOCUMENTO

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -97,7 +97,7 @@
         <div class="con">
             <header class="head-form">
                 <h2>Login</h2>
-                <p>Ingresarás al Poral de Capacitaciones</p>
+                <p>Poral de Capacitaciones</p>
             </header>
             <br />
             <div class="field-set">
@@ -113,7 +113,7 @@
                 <button class="log-in" type="submit" id="login">Iniciar Sesión</button>
             </div>
             <div class="other">
-                <a class="btn submits frgt-pass" (click)="reset()">¿Olvidaste la contraseña?</a>
+                <a class="btn submits frgt-pass" >¿Olvidaste la contraseña?</a>
             </div>
         </div>
     </form>
