--- a/src/app/pages/collaborator/collaborator.component.html
+++ b/src/app/pages/collaborator/collaborator.component.html
@@ -13,7 +13,7 @@
                                 <div class="wrapper">
                                     <input  type="file" name="foto" id="foto" accept=".jpg, .png" hidden="hidden" (change)="changeFoto($event)"  />
                                     <label class="position-relative" for="foto">
-                                        <img *ngIf="!isLoading" src="{{avatar}}" id="img" class="img-fluid rounded-start" alt="..." />
+                                        <img *ngIf="!isLoading" src="{{avatar}}" id="image" class="img-fluid rounded-start rounded-pill" alt="..." />
                                         <div class="position-absolute w-100 h-100 mx-auto align-items-center">
                                             <div class="mx-auto loader" *ngIf="isLoading">
                                                 <div class="orbe" style="--index: 0"></div>
