--- a/src/app/pages/tabs/tabdocumento/tabdocumento.component.html
+++ b/src/app/pages/tabs/tabdocumento/tabdocumento.component.html
@@ -19,7 +19,7 @@
                                     <div class="col-lg-12 col-md-12 col-sm-10">
                                         <div class="card">
                                         </div>
-                                        <app-dtarchivodocumentos (eventoEnviarDataDoc)="enviarDatos($event)"></app-dtarchivodocumentos>
+                                        <app-dtarchivodocumentos (eventoEnviarDataDoc)="enviarDatos($event)" [idDoc]="idDoc"></app-dtarchivodocumentos>
                                     </div>
                                 </div>
                             </div>
