--- a/src/app/pages/datatable/dtarchivodocumentos/dtarchivodocumentos.component.html
+++ b/src/app/pages/datatable/dtarchivodocumentos/dtarchivodocumentos.component.html
@@ -12,7 +12,7 @@
             <i class="fas fa-plus-plus"></i> Archivo
         </button>
     </div>
-    <table [ngClass]="{'table-responsive': true}" *ngIf="!isLoading" datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover" id="table">
+    <table [ngClass]="{'table-responsive': true}" datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover" id="table">
         <thead>
             <tr>
                 <th>N°</th>
@@ -28,14 +28,14 @@
             <tr *ngFor="let item of listaDocumentos; let i = index;">
                 <td>{{ i + 1 }}</td>
                 <td>{{ item.descripcion }}</td>
-                <td>{{ item.actualizado }}</td>
+                <td>{{ item.actualizado | date: 'yyyy-MM-dd HH:mm:ss' }}</td>
                 <td>{{ item.fechaLimite | date: 'yyyy-MM-dd HH:mm:ss' }}</td>
                 <td>{{ item.lectura == 0 ? 'Si' : 'No' }}</td>
                 <td>{{ item.disponible == 0 ? 'Si' : 'No' }}</td>
                <td style="text-align: center;">
-                    <!-- <a type="button" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar">
+                    <a type="button" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="datosArchivo(item.documento_id)">
                         <i class="bi bi-pencil-square"></i>
-                    </a> -->
+                    </a>
                     <a type="button" class="btn btn-outline-danger ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar" (click)="eliminar(item)">
                         <i class="bi bi-trash"></i>
                     </a>                   
