--- a/src/app/pages/datatable/dtdocumentos/dtdocumentos.component.html
+++ b/src/app/pages/datatable/dtdocumentos/dtdocumentos.component.html
@@ -33,9 +33,9 @@
                 <td>{{ item.tipo }}</td>
                 <td>{{ item.created_at }}</td>
                <td style="text-align: center;">
-                    <!-- <a type="button" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar" [routerLink]="['/dashboard/collaborator', item.id]">
+                    <a type="button" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar" [routerLink]="['/dashboard/documentos', item.id]">
                         <i class="bi bi-pencil-square"></i>
-                    </a> -->
+                    </a>
                     <a type="button" class="btn btn-outline-danger ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Deshabilitar" (click)="eliminarDocumento(item)">
                         <i class="bi bi-trash"></i>
                     </a>
