PORTAL: otros cambios

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -96,8 +96,8 @@
     <form class="needs-validation" [formGroup]="loginForm" (ngSubmit)="login()" id="loginForm" novalidate>
         <div class="con">
             <header class="head-form">
-                <h2>Login</h2>
-                <p>Poral de Capacitaciones</p>
+                <h2>Bienvenidos</h2>
+                <p>Portal de Capacitaciones</p>
             </header>
             <br />
             <div class="field-set">
