--- a/src/app/pages/datatable/dtevaluaciones/dtevaluaciones.component.html
+++ b/src/app/pages/datatable/dtevaluaciones/dtevaluaciones.component.html
@@ -42,6 +42,9 @@
                     </a>
                 </td>
             </tr>
+            <tr *ngIf="listaEvaluaciones.length === 0">
+                <td colspan="7">No hay registros</td>
+            </tr>
         </tbody>
     </table>
 </div>
