--- a/src/app/pages/tabs/tabdocumento/tabdocumento.component.html
+++ b/src/app/pages/tabs/tabdocumento/tabdocumento.component.html
@@ -28,7 +28,7 @@
                                     <div class="col-lg-12 col-md-12 col-sm-10">
                                         <div class="card">
                                         </div>
-                                        <app-dtpermisodocumentos (eventoEnviarDataPer)="pasarDatos($event)"></app-dtpermisodocumentos>
+                                        <app-dtpermisodocumentos (eventoEnviarDataPer)="pasarDatos($event)" [idDoc]="idDoc"></app-dtpermisodocumentos>
                                     </div>
                                 </div>
                             </div>
