--- a/src/app/pages/archivo/archivo.component.css
+++ b/src/app/pages/archivo/archivo.component.css
@@ -4,7 +4,7 @@
     /* width: 72vw;   */
 }
 
-/**************/
+/* 
 .loader {
     --size-loader: 70px;
     --size-orbe: 10px;
@@ -48,7 +48,7 @@
     }
   }
 
-  /*************************************/
+  
 
   .iframe-desvanecer {
     opacity: 0;
@@ -57,4 +57,4 @@
   
   .iframe-desvanecer.cargando {
     opacity: 1;
-  }
+  } */
