--- a/src/app/pages/cambiarclave/cambiarclave.component.css
+++ b/src/app/pages/cambiarclave/cambiarclave.component.css
@@ -1,11 +1,10 @@
-.mainDiv {
+/* .mainDiv {
     display: flex;
     min-height: 100%;
     align-items: center;
     justify-content: center;
     margin-bottom: -5px;
-    /* background-color: #ffffff; */
-    /* font-family: "Open Sans", sans-serif; */
+
   }
   .cardStyle {
     width: 500px;
@@ -100,20 +99,17 @@
     }
   }
   
-  /****************************/
 
  
 .titulo {
-  /* background-color: rgba(0, 95, 85, 1);
-  color: #FFFFFF; */
+
   font-size: 1.5rem;
 }
 
 .card {
   --border-size: 3px;
   --border-angle: 0turn;
-  /* width: 60vmin;
-  height: 50vmin; */
+
   background-image: conic-gradient( rgb(247, 245, 249), rgb(253, 253, 255) 50%, rgb(250, 247, 252)), conic-gradient(from var(--border-angle), transparent 20%, #08f, #f03);
   background-size: calc(100% - (var(--border-size) * 2)) calc(100% - (var(--border-size) * 2)), cover;
   background-position: center center;
@@ -131,10 +127,7 @@
     --border-angle: 1turn;
   }
 }
-/* .card:hover {
-  -webkit-animation-play-state: paused;
-          animation-play-state: paused;
-} */
+
 
 @property --border-angle {
   syntax: "<angle>";
@@ -142,48 +135,7 @@
   initial-value: 0turn;
 }
 
-/****************************
-/* Esto es definir los estilos CSS para un elemento de botón. Establece el relleno, el tamaño de la
-  fuente, la transformación del texto, el espaciado entre letras, el grosor de la fuente, el color,
-  el color de fondo, el borde, el radio del borde, la sombra del cuadro, la transición, el cursor y
-  las propiedades del contorno del botón. También define los estilos para cuando se pasa el cursor
-  sobre el botón o se hace clic en él, incluido el cambio del color de fondo, la sombra del cuadro,
-  el color y la posición. */
-  /* button {
-    padding: 1.3em 3em;
-    font-size: 11px;
-    text-transform: uppercase;
-    letter-spacing: 2.5px;
-    font-weight: 500;
-    color: #000;
-    background-color: #b9cbd1;
-    border: none;
-    border-radius: 45px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
-  }
-  
-  button:hover {
-    background-color: #23c483;
-    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
-    color: #fff;
-    transform: translateY(-7px);
-  }
 
-  .cancelar:hover {
-    background-color: #3b3d3d;
-    box-shadow: 0px 15px 20px rgba(123, 125, 124, 0.4);
-    color: #fff;
-    transform: translateY(-7px);
-  }
-  
-  button:active {
-    transform: translateY(-1px);
-  } */
-
-  /**************/
 .loader {
   --size-loader: 70px;
   --size-orbe: 10px;
@@ -227,7 +179,7 @@
   }
 }
 
-/**********/
+
 
 .form {
   background-image: linear-gradient(-225deg, #effefd 50%, #8dddd0 50%);
@@ -271,7 +223,7 @@ button:active {
   box-shadow: inset 1px 1px 2px #BABECC, inset -1px -1px 2px #FFF;
 }
 
-/* button:hover {
+button:hover {
   background-color: #23c483;
   box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
   color: #fff;
