--- a/src/app/pages/datatable/dtgrupos/dtgrupos.component.html
+++ b/src/app/pages/datatable/dtgrupos/dtgrupos.component.html
@@ -35,6 +35,9 @@
                     </a>                   
                 </td>
             </tr>
+            <tr *ngIf="listaGrupos.length === 0">
+                <td colspan="8" style="text-align: center;">No hay registros</td>
+            </tr>
         </tbody>
     </table>
 </div>
@@ -79,7 +82,7 @@
                                     <div class="orbe" style="--index: 3"></div>
                                     <div class="orbe" style="--index: 4"></div>
                                 </div>
-                                <table  *ngIf="!isLoading" datatable="datatable" [dtOptions]="dtOptions1" [dtTrigger]="dtTrigger1" class="table table-striped table-bordered row-border hover" id="table">
+                                <table [ngClass]="{'table-responsive': true}" *ngIf="!isLoading" datatable="datatable" [dtOptions]="dtOptions1" [dtTrigger]="dtTrigger1" class="table table-striped table-bordered row-border hover" id="table">
                                     <thead>
                                         <tr>
                                             <th>N°</th>
@@ -96,6 +99,9 @@
                                             <td>{{ item.agencia}}</td>
                                             <td>{{ item.cargo  }}</td>
                                             <td><input id="inputCheck" type="checkbox"></td>
+                                        </tr>
+                                        <tr *ngIf="listaColaboradores.length === 0">
+                                            <td colspan="5" style="text-align: center;">No hay registros</td>
                                         </tr>
                                     </tbody>
                                 </table>
