--- a/src/app/pages/datatable/dtpermisodocumentos/dtpermisodocumentos.component.html
+++ b/src/app/pages/datatable/dtpermisodocumentos/dtpermisodocumentos.component.html
@@ -20,11 +20,20 @@
                 <td>{{ item.tipoPermiso_id == '1' ? 'Departamento' : 'Colaborador' }}</td>
                 <td>{{ item.nombre }}</td>
                 <td>{{ item.fechaRegistro  }}</td>
-               <td style="text-align: center;">
+                <td style="text-align: center;">
+                    <!-- <a type="button" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar" data-bs-toggle="modal" data-bs-target="#exampleModal2" (click)="datosPermisos(item.id)">
+                        <i class="bi bi-pencil-square"></i>
+                    </a> -->
                     <a type="button" class="btn btn-outline-danger ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar" (click)="eliminar(item)">
                         <i class="bi bi-trash"></i>
                     </a>
+                    <!-- <a type="button" class="btn btn-primary" id="btnActualizar" (click)="editar();" [disabled]="!formUser.valid">
+                        Actualizar
+                    </a> -->
                 </td>
+            </tr>
+            <tr *ngIf="listaPermisos.length === 0">
+                <td colspan="5" style="text-align: center;">No hay registros</td>
             </tr>
         </tbody>
     </table>
