--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -6,7 +6,7 @@
             <img src="./assets/img/logo.png" alt="">
             <span class="d-none d-lg-block"> ACACYPAC</span>
         </a>
-        <i class="bi bi-list toggle-sidebar-btn"></i>
+        <i class="bi bi-list toggle-sidebar-btn" id="ocultar" ></i>
     </div>
 
     <nav class="header-nav ms-auto">
@@ -37,7 +37,7 @@
                     <li>
                         <a class="dropdown-item d-flex align-items-center" (click)="logout()">
                             <i class="bi bi-box-arrow-right"></i>
-                            <span>Sign Out</span>
+                            <span>Cerrar Sesión</span>
                         </a>
                     </li>
                 </ul>
