PORTAL: NUEVO AVANCE....

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -117,4 +117,93 @@
         </div>
     </div>
 </section>
+
+<h3>Documentos disponibles</h3>
+
+<section class="section">
+    <div class="row">
+        <div class="col-lg-12">
+
+            <!-- <div class="card" *ngFor="let tipo of listaTipoDocumentos; let i = index" >
+                <div class="card-body" >
+                  <div class="accordion accordion-flush" id="accordionFlushExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading{{ tipo.tipo }}">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" [attr.data-bs-target]="'#miElementoPersonalizado' + tipo.tipo" aria-expanded="true" [attr.aria-controls]="'miElementoPersonalizado' + tipo.tipo">
+                              <h5>{{ tipo.tipo }}</h5>
+                            </button>
+                          </h2>
+                        <div [id]="'miElementoPersonalizado' + tipo.tipo" class="accordion-collapse collapse show"  [attr.data-bs-parent]="'#miAcordeonPersonalizado'">
+                        <div class="accordion-body">
+                            <li *ngFor="let item of listaDocumentos">
+                              
+                                <a type="button" *ngIf="item.tipoDocumento_id == tipo.id && item.colaborador_id == id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0 "  (click)="cargarPDF(item.nombreArchivo)">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <img  src="../../../assets/img/pdf.png" alt="" style="height: 100px; width: 100px;">
+                                            <br>
+                                            <span >{{ item.nombreArchivo }}</span>
+                                        </div>
+                                    </div>
+                                </a>
+                                <a type="button" *ngIf="item.tipoDocumento_id == tipo.id &&  item.departamento_id == departamento_id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0 "  (click)="cargarPDF(item.nombreArchivo)">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <img  src="../../../assets/img/pdf.png" alt="" style="height: 100px; width: 100px;">
+                                            <br>
+                                            <span >{{ item.nombreArchivo }}</span>
+                                        </div>
+                                    </div>
+                                </a>
+                                
+                            </li>
+                        </div>
+                      </div>
+                    </div>
+                  </div>    
+                </div>
+            </div> -->
+            
+            <div class="card" *ngFor="let tipo of listaTipoDocumentos; let i = index" >
+                <div class="card-body" >
+                  <div class="accordion accordion-flush" id="accordionFlushExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading{{ tipo.tipo }}">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" [attr.data-bs-target]="'#miElementoPersonalizado' + tipo.tipo" aria-expanded="true" [attr.aria-controls]="'miElementoPersonalizado' + tipo.tipo">
+                              <h5>{{ tipo.tipo }}</h5>
+                            </button>
+                          </h2>
+                        <div [id]="'miElementoPersonalizado' + tipo.tipo" class="accordion-collapse collapse show"  [attr.data-bs-parent]="'#miAcordeonPersonalizado'">
+                        <div class="accordion-body">
+                            <li *ngFor="let item of listaDocumentos">
+                              
+                                <a type="button" *ngIf="item.tipoDocumento_id == tipo.id && item.colaborador_id == id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0 "  (click)="cargarPDF(item.nombreArchivo)">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <img  src="../../../assets/img/pdf.png" alt="" style="height: 100px; width: 100px;">
+                                            <br>
+                                            <span >{{ item.nombreArchivo }}</span>
+                                        </div>
+                                    </div>
+                                </a>
+                                <a type="button" *ngIf="item.tipoDocumento_id == tipo.id &&  item.departamento_id == departamento_id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0 "  (click)="cargarPDF(item.nombreArchivo)">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <img  src="../../../assets/img/pdf.png" alt="" style="height: 100px; width: 100px;">
+                                            <br>
+                                            <span >{{ item.nombreArchivo }}</span>
+                                        </div>
+                                    </div>
+                                </a>
+                                
+                            </li>
+                        </div>
+                      </div>
+                    </div>
+                  </div>    
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
  
