--- a/src/app/pages/datatable/dtarchivodocumentos/dtarchivodocumentos.component.css
+++ b/src/app/pages/datatable/dtarchivodocumentos/dtarchivodocumentos.component.css
@@ -1,4 +1,4 @@
-th , td {
+ th , td {
     text-align: center;
 }
 
@@ -14,87 +14,78 @@ table tr th{
     vertical-align:center;
 }
 
-/*****************************/
 
-  /* button {
-    padding: 1.3em 3em;
-    font-size: 11px;
-    text-transform: uppercase;
-    letter-spacing: 2.5px;
-    font-weight: 500;
-    color: #000;
-    background-color: #b9cbd1;
-    border: none;
-    border-radius: 45px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
-  }
-  
-  button:hover {
-    background-color: #1fa7d9;
-    box-shadow: 0px 15px 20px rgba(38, 156, 186, 0.4);
-    color: #fff;
-    transform: translateY(-7px);
-  }
+.wrapper{
+  background: #fff;
+  border-radius: 5px;
+  padding: 30px;
+  /*box-shadow: 7px 7px 12px rgba(0, 95, 85, 1);*/
+}
+.wrapper header{
+  color: rgba(0, 95, 85, 1);
+  font-size: 27px;
+  font-weight: 600;
+  text-align: center;
+}
+.wrapper #formFile{
+  height: 167px;
+  display: flex;
+  cursor: pointer;
+  margin: 30px 0;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border-radius: 5px;
+  border: 2px dashed rgba(0, 95, 85, 1);
+}
 
-  .cancelar:hover {
-    background-color: #3b3d3d;
-    box-shadow: 0px 15px 20px rgba(123, 125, 124, 0.4);
-    color: #fff;
-    transform: translateY(-7px);
-  }
-  
-  button:active {
-    transform: translateY(-1px);
-  } */
+#formFile :where(i, p){
+  color: rgba(0, 95, 85, 1);
+}
+#formFile i{
+  font-size: 50px;
+}
 
-  @media (max-width: 767px) {
-    .table-responsive td:nth-child(n+4), 
-    .table-responsive th:nth-child(n+4) {
-      display: none;
-    }
-  }
+#formFile p {
+  margin-top: 15px;
+  font-size: 16px;
+}
 
-  .form {
-    background-image: linear-gradient(-225deg, #effefd 50%, #8dddd0 50%);
-  }
-  
-  button, input, select {
-    border: 0;
-    outline: 0;
-    font-size: 16px;
-    border-radius: 320px;
-    padding: 16px;
-    background-color: #EBECF0;
-    text-shadow: 1px 1px 0 #FFF;
-  }
-  
-  input {
-    margin-right: 8px;
-    box-shadow: inset 2px 2px 5px #BABECC, inset -5px -5px 10px #FFF;
-    width: 100%;
-    box-sizing: border-box;
-    transition: all 0.2s ease-in-out;
-    appearance: none;
-    -webkit-appearance: none;
-  }
-  input:focus {
-    box-shadow: inset 1px 1px 2px #BABECC, inset -1px -1px 2px #FFF;
-  }
-  
-  button {
-    color: #61677C;
-    font-weight: bold;
-    /* box-shadow: -5px -5px 20px #8dddd0, 5px 5px 20px #fff; */
-    transition: all 0.2s ease-in-out;
-    cursor: pointer;
-    font-weight: 600;
-  }
-  button:hover {
-    box-shadow: -2px -2px 5px #FFF, 2px 2px 5px #BABECC;
-  }
-  button:active {
-    box-shadow: inset 1px 1px 2px #BABECC, inset -1px -1px 2px #FFF;
-  }
+#formFile.dragover {
+  border-style: solid;
+  font-size: 2rem;
+  color: #c8c9dd;
+  font-weight: 600;
+  background: rgba(0, 95, 85, 0.1);
+}
+
+
+
+
+.upload-container {
+  position:relative
+}
+.upload-container input {
+  border:1px solid #92b0b3;
+  background:#f1f1f1;
+  outline:2px dashed #92b0b3;
+  outline-offset:-10px;
+  padding:100px 0 100px 50px;
+  text-align:center !important;
+  width:500px
+}
+.upload-container input:hover {
+  background:#ddd
+}
+.upload-container:before {
+  position:absolute;
+  bottom:50px;
+  left:245px;
+  content:" o arrastra el archivo";
+  color:#3f8188;
+  font-weight:900
+}
+.upload-btn {
+  margin-left:300px;
+  padding:7px 20px
+}
