--- a/src/app/pages/datatable/dtarchivodocumentos/dtarchivodocumentos.component.html
+++ b/src/app/pages/datatable/dtarchivodocumentos/dtarchivodocumentos.component.html
@@ -1,3 +1,75 @@
+<div class="container">
+    <div class="form">
+        <div class="modal-body">
+            <form [formGroup]="formDocumento" id="form">
+                
+                <div class="row">
+                    <div class="col-md-6 mb-2">
+                        <!-- <div class="wrapper">
+                            <form id="formFile">
+                                <input class="form-control" type="file" name="file" id="pdf" formControlName="pdf" (change)="changeArchivo($event)" accept="application/pdf" />
+                                <i class="bi bi-cloud-upload-fill"></i>
+                                <p id="title">Clic aquí para seleccionar el archivo</p>
+                            </form>
+                        </div> -->
+
+                        <div class="upload-container">
+                            <input type="file" id="pdf" (change)="changeArchivo($event)" accept="application/pdf" />
+                        </div>                         
+
+                        <div class="alert alert-danger mt-2" [hidden]="pdf.valid || pdf.pristine">
+                            Debes seleccionar un archivo
+                        </div>
+                    </div>
+                    <div class="col-md-6 ">
+                        <iframe src="" #myFrame style="width:100%; height:250px;" frameborder="0" id="filePDF"></iframe>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 mb-2">
+                        <label for="descripcion" class="form-label">Descripción de archivo</label>
+                        <input class="form-control" type="text" id="descripcion" formControlName="descripcion" placeholder="Agregar una descripción" required>
+                    </div>
+                    <div class="alert alert-danger mt-2" [hidden]="descripcion.valid || descripcion.pristine">
+                        Debes agregar una pequeña descripción
+                    </div>
+                    <div class="col-md-4 mb-2">
+                        <label class="form-label mt-2">¿Solo lectura?</label>
+                        <select [(ngModel)]='ngSelectL' class="form-select" id="lectura" formControlName="lectura" required>
+                            <option value="0" selected>Si</option>
+                            <option value="1">No</option>
+                        </select>
+                    </div>
+                    <div class="alert alert-danger mt-2" [hidden]="lectura.valid || lectura.pristine">
+                        Debes seleccionar una opción
+                    </div>
+                    <div class="col-md-4 mb-2">
+                        <label class="form-label mt-2">¿Disponible?</label>
+                        <select [(ngModel)]='ngSelectD' class="form-select" id="disponible" formControlName="disponible" required>
+                            <option value="0" selected>Si</option>
+                            <option value="1">No</option>
+                        </select>
+                    </div>
+                    <div class="alert alert-danger mt-2" [hidden]="disponible.valid || disponible.pristine">
+                        Debes seleccionar una opción
+                    </div>
+                    <div class="col-md-4 mb-2">
+                        <label class="form-label mt-2" for="fecha">Fecha limite disponible </label>
+                        <input type="datetime-local" class="form-control" id="fechaLimite" >
+                    </div>
+                    <!-- <div class="alert alert-danger mt-2" [hidden]="fechaLimite.valid || fechaLimite.pristine">
+                        Debes seleccionar una fecha
+                    </div> -->
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary cancelar" data-bs-dismiss="modal" (click)="cancelar()">Cancelar</button>
+            <button type="submit" id="btnAceptar" class="btn btn-success" data-bs-dismiss="modal" (click)="cargar()" >Agregar</button>
+        </div>
+    </div>
+</div>
+
 <div class="mx-auto loader" *ngIf="isLoading">
     <div class="orbe" style="--index: 0"></div>
     <div class="orbe" style="--index: 1"></div>
@@ -7,11 +79,11 @@
 </div>
 
 <div class="container table-responsive ">
-    <div class="d-flex justify-content-end mb-2">
+    <!-- <div class="d-flex justify-content-end mb-2">
         <button type="button" class="btn btn-primary ml-2 " id="archivo" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="cancelar()">
             <i class="fas fa-plus-plus"></i> Archivo
         </button>
-    </div>
+    </div> -->
     <table [ngClass]="{'table-responsive': true}" datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover" id="table">
         <thead>
             <tr>
@@ -26,7 +98,7 @@
         </thead>
         <tbody>
             <tr *ngFor="let item of listaDocumentos; let i = index;">
-                <td>{{ i + 1 }}</td>
+                <td>{{  i + 1 }}</td>
                 <td>{{ item.descripcion }}</td>
                 <td>{{ item.actualizado | date: 'yyyy-MM-dd HH:mm:ss' }}</td>
                 <td>{{ item.fechaLimite | date: 'yyyy-MM-dd HH:mm:ss' }}</td>
