--- a/src/app/pages/datatable/dtpermisodocumentos/dtpermisodocumentos.component.html
+++ b/src/app/pages/datatable/dtpermisodocumentos/dtpermisodocumentos.component.html
@@ -1,9 +1,59 @@
+
+
+<div class="container">
+    <form [formGroup]="formPermiso" id="form">
+        <div class="row">
+            <label class="form-label mt-2">Tipo de permiso</label>
+            <div >
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="departamento" name="tipo" formControlName="departamento" value="1" [(ngModel)]="selectedOption">
+                    <label class="form-check-label" for="departamento">Departamento</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="colaborador" name="tipo" formControlName="colaborador" value="2" [(ngModel)]="selectedOption">
+                    <label class="form-check-label" for="colaborador">Colaborador</label>
+                </div>
+            </div>
+            <div class="mt-2">
+                <label class="form-label mt-2">Departamento</label>
+                <select [(ngModel)]='ngSelectD' class="form-select" id="departamentoSelect" formControlName="departamentoSelect" required>
+                    <option value="0" disabled selected>Selecciona</option>
+                    <option *ngFor="let e of listaDepartamento" [value]="e.id">
+                        {{ e.nombre }}
+                    </option>
+                </select>
+                <div class="alert alert-danger mt-2" [hidden]="departamentoSelect.valid || departamentoSelect.pristine">
+                    Debes seleccionar una opción
+                </div>
+            </div>
+            <div class=" mt-2">
+                <label class="form-label mt-2">Colaborador</label>
+                <select [(ngModel)]='ngSelectC' class="form-select" id="colaboradorSelect" formControlName="colaboradorSelect" required>
+                    <option value="0" disabled selected>Selecciona</option>
+                    <option *ngFor="let e of listaColaborador" [value]="e.id">
+                        {{ e.nombres }} {{ e.apellidos }}
+                    </option>
+                </select>
+                <div class="alert alert-danger mt-2" [hidden]="colaboradorSelect.valid || colaboradorSelect.pristine">
+                    Debes seleccionar una opción
+                </div>
+            </div>
+            
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary cancelar" data-bs-dismiss="modal" (click)="cancelar()">Cerrar</button>
+            <button type="button" class="btn btn-success" data-bs-dismiss="modal" (click)="cargar()">Agregar</button>
+        </div>
+    </form>
+</div>
+
+
 <div class="container table-responsive mt-2">
-    <div class="d-flex justify-content-end mb-2">
+    <!-- <div class="d-flex justify-content-end mb-2">
         <button type="button" class="btn btn-primary ml-2 mt-2" data-bs-toggle="modal" data-bs-target="#exampleModal2" (click)="cancelar()">
             <i class="fas fa-plus-plus"></i> Permiso
         </button>
-    </div>
+    </div> -->
     <table datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover">
         <thead>
             <tr>
