--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -53,7 +53,7 @@
             </ul>
         </li>
 
-        <li class="nav-heading">Documentos</li>
+        <!-- <li class="nav-heading">Documentos</li>
 
         <li class="nav-item" >
             <a class="nav-link collapsed" data-bs-target="#politicas-nav" data-bs-toggle="collapse" href="#">
@@ -109,7 +109,7 @@
               <li *ngFor="let item of listaDocumentos">
                 <a type="button" *ngIf="item.tipoDocumento_id === 4 && item.colaborador_id == id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0"  (click)="cargarPDF(item.nombreArchivo)">
                   <i class="bi bi-circle"></i><span>{{ item.nombreArchivo }}</span>
-                  <!-- <i class="bi bi-circle"></i><span>{{ item.colaborador_id }}</span> -->
+                  
                 </a>
                 <a type="button" *ngIf="item.tipoDocumento_id === 4 && item.departamento_id == departamento_id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0"  (click)="cargarPDF(item.nombreArchivo)">
                   <i class="bi bi-circle"></i><span>{{ item.nombreArchivo }}</span>
@@ -206,8 +206,8 @@
                 </a>
               </li>
             </ul>
-        </li>
+        </li> -->
 
-        <li class="nav-heading">Evaluaciones</li>
+        <!-- <li class="nav-heading">Evaluaciones</li> -->
     </ul>
 </aside><!-- End Sidebar-->
